testsuite/poke.pkl/mul-integers-overflow-diag-2.pk
/* { dg-do compile } */

var res
  = 0x7fff_ffff_ffff_ffff * 4; /* { dg-error "overflow" } */
